# tantivy-js

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
crates/tantivy-js-core/: Cargo.toml
crates/tantivy-js-core/src/: index.rs  lib.rs  schema.rs  search.rs
docs/plans/: 2026-02-03-tantivy-js.md
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
scripts/: build.js
src/: index-writer.js  index.js  loader.js  schema.js  searcher.js
test/: index.test.js  schema.test.js
